--- a/dev/Code/Sandbox/Editor/NewLevelDialog.ui
+++ b/dev/Code/Sandbox/Editor/NewLevelDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>292</width>
-    <height>317</height>
+    <height>385</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -30,7 +30,7 @@
        <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
       </property>
       <item row="2" column="0">
-       <widget class="QLabel" name="STATIC3">
+       <widget class="QLabel" name="TERRAIN_RESOLUTION_LABEL">
         <property name="text">
          <string>Heightmap Resolution:</string>
         </property>
@@ -45,7 +45,7 @@
       <item row="2" column="1">
        <widget class="QComboBox" name="TERRAIN_RESOLUTION"/>
       </item>
-      <item row="3" column="0">
+      <item row="4" column="0">
        <widget class="QLabel" name="STATIC4">
         <property name="text">
          <string>Meters Per Texel:</string>
@@ -58,10 +58,10 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
        <widget class="QComboBox" name="TERRAIN_UNITS"/>
       </item>
-      <item row="7" column="0" colspan="2">
+      <item row="9" column="0" colspan="2">
        <widget class="QLabel" name="TERRAIN_INFO">
         <property name="text">
          <string>Terrain Size: 32x32 Km</string>
@@ -71,7 +71,7 @@
         </property>
        </widget>
       </item>
-      <item row="8" column="0" colspan="2">
+      <item row="10" column="0" colspan="2">
        <widget class="QLabel" name="STATIC_WARNING">
         <property name="text">
          <string>Warning: After terrain resize, undo queue will be lost</string>
@@ -81,7 +81,84 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="TERRAIN_TYPE"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Type:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="TERRAIN_SIZE_LABEL">
+        <property name="text">
+         <string>Terrain Size</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <layout class="QFormLayout" name="formLayout_3">
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QLabel" name="TERRAIN_SIZE_X_LABEL">
+          <property name="text">
+           <string>x:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="TERRAIN_SIZE_Y_LABEL">
+          <property name="text">
+           <string>y:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="TERRAIN_SIZE_Z_LABEL">
+          <property name="text">
+           <string>z:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="TERRAIN_SIZE_X"/>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="TERRAIN_SIZE_Y"/>
+        </item>
+        <item row="2" column="1">
+         <widget class="QLineEdit" name="TERRAIN_SIZE_Z"/>
+        </item>
+       </layout>
+      </item>
+      <item row="8" column="0">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
      </layout>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="2">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
     </widget>
    </item>
    <item row="0" column="0" colspan="2">
@@ -127,13 +204,6 @@
        <widget class="QComboBox" name="LEVEL_FOLDERS"/>
       </item>
      </layout>
-    </widget>
-   </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
     </widget>
    </item>
   </layout>
